--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 <title>My awesome web page
 </title> 
+<img>
+ src="https://avatars.githubusercontent.com/u/95241395?v=4">
 </head>
 </h1>
-
-
