Creating new lists

--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 <head> 
 <title>My awesome web page
 <img src="https://avatars.githubusercontent.com/u/95241395?v=4">
+<ol> 
+<li>This</li> 
+<li>Is an</li> 
+<li>Ordered list</li> 
+</ol>
 </head>
 </h1>
