--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <h1>
 <html>
 <head> 
+<ol>
+   <li>This</li> 
+   <li>Is an</li> 
+   <li>Ordered list</li> 
+</ol>
 <title>My awesome web page
 <img src="https://avatars.githubusercontent.com/u/95241395?v=4">
 </head>
