--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
    <li>This</li> 
    <li>Is an</li> 
    <li>Ordered list</li> 
+      <li>My favorite site is <a 
+   href="https://github.com">GitHub</a>!</li>
 </ol>
 <title>My awesome web page
 <img src="https://avatars.githubusercontent.com/u/95241395?v=4">
